salesforce/force-app/main/default/objects/NetSuite_Customer_Match__c/NetSuite_Customer_Match__c.object-meta.xml
<CustomObject>
    <description>A review item used when human intervention is needed to map an Account to a NetSuite Customer.</description>
    <label>NetSuite Customer Match</label>
    <nameField>
        <label>NetSuite Customer Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Customer Matches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>