salesforce/force-app/main/default/objects/NetSuite_Customer_Match__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The Account that needs to be matched to a NetSuite Customer.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NetSuite Customer Matches</relationshipLabel>
    <relationshipName>NetSuite_Customer_Matches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>