salesforce/force-app/main/default/objects/NetSuite_Customer_Match__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <description>Whether an existing NetSuite customer is a match, or a new customer should be created.</description>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Use Existing</fullName>
            </value>
            <value>
                <fullName>Create New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>