salesforce/force-app/main/default/objects/NetSuite_Customer_Match__c/fields/Resolved_At__c.field-meta.xml
<CustomField>
    <fullName>Resolved_At__c</fullName>
    <description>When a human completed the review.</description>
    <label>Resolved At</label>
    <type>DateTime</type>
</CustomField>