salesforce/force-app/main/default/objects/NetSuite_Customer_Match__c/fields/Selected_NetSuite_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>Selected_NetSuite_Internal_ID__c</fullName>
    <description>The internalid of a NetSuite Customer chosen by a human to match;  or returned after a new NetSuite Customer was created.</description>
    <label>Selected NetSuite Internal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>