salesforce/force-app/main/default/objects/NetSuite_Customer_Match__c/fields/Suggested_At__c.field-meta.xml
<CustomField>
    <fullName>Suggested_At__c</fullName>
    <description>When the matching customer suggestions were generated.  Used to determine when they are stale and need to be refreshed.</description>
    <label>Suggested At</label>
    <type>DateTime</type>
</CustomField>