salesforce/force-app/main/default/objects/NetSuite_Customer_Match__c/fields/Suggested_Matches_JSON__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Matches_JSON__c</fullName>
    <description>NetSuite Customers that are suggested as matches for the Account</description>
    <label>Suggested Matches JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>